tests/invalid_code/unary_expr.bs
fn main() {
    _ = ~1.0;
    _ = !1;
    _ = -"";
}
